Bug 89226 - systemd-gpt-auto-generator does not generate srv.mount
Summary: systemd-gpt-auto-generator does not generate srv.mount
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-19 13:00 UTC by chevrier.mathieu
Modified: 2015-03-13 04:38 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix /srv subnode detection (494 bytes, patch)
2015-02-19 13:01 UTC, chevrier.mathieu
Details | Splinter Review

Description chevrier.mathieu 2015-02-19 13:00:29 UTC
systemd does not automount /srv as advertised on
http://www.freedesktop.org/software/systemd/man/systemd-gpt-auto-generator.html

The generator finds the partition in the GPT but keeps the node of the disk instead of the partition's one. It then obviously fails to find a filesystem on it and cannot generate srv.mount.

Very simple patch attached.
Comment 1 chevrier.mathieu 2015-02-19 13:01:20 UTC
Created attachment 113662 [details] [review]
fix /srv subnode detection
Comment 2 Zbigniew Jedrzejewski-Szmek 2015-03-13 04:38:23 UTC
Thanks, applied in http://cgit.freedesktop.org/systemd/systemd/commit/?id=d736e4f3e7.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.