gpt-auto-generator: fix detection of /srv

https://bugs.freedesktop.org/show_bug.cgi?id=89226